# rsvp

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.md  README.md
db/: init.sql
public/: index.html
src/: cli.yml  mailer.rs  main.rs  migrate.rs  queries.rs  server.rs
